Changing title message

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
         <span class="quote-author">John F. Kennedy</span>
       </div>
       <div class="title-container">
-        <h1 class="title">...That is why I'm still learning ThreeJS</h1>
+        <h1 class="title">...That's why I keep learning ThreeJS</h1>
       </div>
     </div>
   </div>
