--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>11 - Textures</title>
+  <title>ThreeJS Demo - Julian A. Murillo</title>
 </head>
 <body>
   <div class="main background">
