--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="subtitle-container">
-        <h2 class="subtitle">It's harder than it seems...</h2>
+        <h2 class="subtitle">ThreeJS harder than it seems...</h2>
       </div>
       <div class="quote-container">
         <div class="literal-quote-container">
@@ -32,7 +32,7 @@
         <span class="quote-author">John F. Kennedy</span>
       </div>
       <div class="title-container">
-        <h1 class="title">...That's why I keep learning ThreeJS</h1>
+        <h1 class="title">...That's why I must keep learning it</h1>
       </div>
     </div>
   </div>
