Grammar correction and additional poligon color

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="subtitle-container">
-        <h2 class="subtitle">ThreeJS harder than it seems...</h2>
+        <h2 class="subtitle">ThreeJS is harder than it seems...</h2>
       </div>
       <div class="quote-container">
         <div class="literal-quote-container">
