Modifying Github link

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="info">
             <a href="https://64lines.medium.com/" target="_blank">Medium</a>
-            <a href="https://github.com/64lines/threejs-pet-project" target="_blank">GitHub</a>
+            <a href="https://github.com/64lines/" target="_blank">GitHub</a>
             <a href="https://twitter.com/64lines" target="_blank">Twitter</a>
         </div>
       </div>
